# agentic_datamodeling

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  databricks.yml  mcp_config.example.json  pyproject.toml  run.sh  sources.yml.example  test_endpoint.py
resources/: agentic_datamodeling.yml  catalog_discovery_job.yml  source_jobs.yml
scripts/: generate_source_jobs.py
src/adm/: __init__.py  main.py  mcp_server.py
src/adm/agents/: __init__.py  catalog_agent.py
src/adm/catalog/: __init__.py  crawler.py  profiler.py  registry.py  relationships.py
src/adm/catalog/sources/: __init__.py  base.py  jdbc.py  unity_catalog.py
src/adm/ddl/: __init__.py  generator.py
src/notebooks/: catalog_discovery.py  test_postgres_connection.py
tests/: __init__.py
