############################
# --- Package Settings --- #
############################

[project]
name = "agentic-datamodeling"
description = "agentic data model generator"
authors = [{ name = "data modeling expedition team", email = "nitinkeshav.bolla@jll.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["databricks-sdk>=0.20.0", "openai>=1.0.0", "sqlalchemy>=2.0.0", "pyyaml>=6.0"]
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["databricks", "data-modeling", "agentic"]
# version will be derived dynamically from version.txt via setuptools
dynamic = ["version"]

[project.scripts]
main = "adm.main:main"
discover = "adm.main:discover"

# docs: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { file = "version.txt" }

# optional dependencies can be installed with square brackets, e.g. `pip install my-package[test,static-code-qa]`
[project.optional-dependencies]
dbrx = ["databricks-cli","openai"]
postgresql = ["psycopg2-binary>=2.9"]
sqlserver = ["pyodbc>=4.0"]
test = ["pytest", "pytest-cov"]
release = ["build", "twine"]
static-code-qa = [
    "pre-commit",
    "pylint",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "Flake8-pyproject",
    "radon",
]
# Installing dev depenendencies in your virtual env makes it so that during development VS Code can 
# - surface linting errors
# - automatically apply formatting
# - show enhanced autocompletion for stubs libraries
# See .vscode/settings.json to see how VS Code is configured to use these tools
dev = ["agentic-datamodeling[dbrx,test,release,static-code-qa]"]

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# include more than only .py files in the distribution package (wheel)
[tool.setuptools.package-data]
adm = ["*.json"]


##############################
# --- Code Quality Tools --- #
##############################

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.black]
line-length = 119
# regular expression ignoring multiple patterns separated by '|' and newlines
exclude = '''
/(
    \.venv
  | venv
)/
'''

[tool.flake8]
docstring-convention = "all"
ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100"]
exclude = ["venv"]
max-line-length = 119

# radon
radon-max-cc = 10

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "databricks.*",
    "openai.*",
]
ignore_missing_imports = true